# ai-gateway

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: cdk-infra.yml  ci.yml  pages.yml
admin-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin-ui/src/: App.vue  main.ts
admin-ui/src/api/: client.ts  types.ts
admin-ui/src/components/: HealthBadge.vue
admin-ui/src/i18n/: index.ts  messages.ts
admin-ui/src/lib/: health.ts
admin-ui/src/router/: index.ts
admin-ui/src/stores/: auth.ts  health.ts  keys.ts  locale.ts  registry.ts  teams.ts  theme.ts  usage.ts
admin-ui/src/styles/: theme.css
admin-ui/src/views/: BudgetsView.vue  DashboardView.vue  DataPlaneView.vue  KeysView.vue  LandingView.vue  ModelsView.vue  TeamsView.vue  UsageView.vue
admin-ui/tests/: HealthBadge.spec.ts  client.spec.ts  dataPlane.spec.ts  i18n.spec.ts  stores.spec.ts
ai-gateway-stack/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
ai-gateway-stack/lib/: ai-gateway-stack-stack.ts  ai-gateway-stack.ts
ai-gateway-stack/lib/constructs/: fargate-app-service.ts
ai-gateway-stack/test/: ai-gateway-stack.test.ts
control-plane/governance-api/: alembic.ini  pyproject.toml
control-plane/governance-api/migrations/: env.py
control-plane/governance-api/migrations/versions/: 4e68505bb0d7_create_core_schema.py  52903a89f6e2_initial_base.py  69c9fd4d9027_add_model_deployments_api_base.py
control-plane/governance-api/src/governance_api/: __init__.py  banner.py  config.py  main.py
control-plane/governance-api/src/governance_api/api/: __init__.py  apps.py  billing.py  config.py  data_plane.py  deps.py  keys.py  memberships.py  models.py  orgs.py  schemas.py  teams.py  users.py
control-plane/governance-api/src/governance_api/auth/: __init__.py  authz.py  dependencies.py  principal.py
control-plane/governance-api/src/governance_api/db/: __init__.py  base.py  models.py  repository.py  session.py
control-plane/governance-api/src/governance_api/domain/: __init__.py  budgets.py  rating.py  scoping.py
control-plane/governance-api/src/governance_api/security/: __init__.py  keys.py
control-plane/governance-api/src/governance_api/services/: __init__.py  audit.py  billing.py  config_compiler.py  metering.py  seed.py
control-plane/governance-api/tests/: conftest.py  factories.py  test_apps_api.py  test_auth.py  test_billing.py  test_billing_api.py  test_budgets.py  test_config_api.py  test_config_compiler.py  test_data_plane_api.py  test_health.py  test_keys_api.py  test_metering.py  test_models.py  test_models_api.py  test_orgs_api.py  test_rating.py  test_repository.py  test_scoping.py  test_seed.py  test_session.py  test_teams_api.py  test_users_memberships_api.py
data-plane/hooks/: pyproject.toml
data-plane/hooks/src/hooks/: __init__.py  auth.py  callbacks.py  enforcement.py  ratelimit.py
data-plane/hooks/src/hooks/guardrails/: __init__.py  injection.py  pii.py  runner.py  schema.py
data-plane/hooks/tests/: conftest.py  test_callbacks.py  test_enforcement.py  test_guardrails.py  test_hook_auth.py  test_ratelimit.py
data-plane/litellm/: config.template.yaml  entrypoint.sh
deploy/docker/: admin-ui.Dockerfile  control-plane.Dockerfile  data-plane.Dockerfile  nginx.conf
deploy/docker-compose/: .env.example  docker-compose.yml  litellm-ui.config.yaml
doc/: aws-cdk-deployment.md  full_run.md  implementation-plan.md  metering-writeback.md  plane-consistency.md  runbook.md  system-design.md  testing-and-debugging.md
doc/ai-gateway/: deployment-and-gtm.md  implementation-plan.md  litellm-evaluation.md  system-design.md
docs/: app.js  guide.html  i18n.guide.js  i18n.index.js  i18n.js  index.html  styles.css
hooks/: auth.py
scripts/: compile_config.py  dev.sh  docker_up.sh  e2e_docker.sh  e2e_docker_qa.sh  export_openapi.py  plane_consistency.sh  seed.py  smoke.sh  stub_provider.py
tests/e2e/: conftest.py  test_aws_deployment.py  test_e2e.py
tests/integration/: conftest.py  test_gateway_integration.py  test_litellm_routing.py
tests/load/: locustfile.py
(+6 files in other folders)
