[project]
name = "ai-gateway"
version = "0.1.0"
description = "AI Gateway — enterprise LLM gateway built on LiteLLM Proxy"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["control-plane/governance-api"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["control-plane/governance-api/src"]
extend-exclude = ["**/migrations/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["control-plane/governance-api/tests"]
addopts = "-q"

[tool.coverage.run]
source = ["governance_api"]
branch = true

[tool.mypy]
python_version = "3.12"
strict = true
files = ["control-plane/governance-api/src"]
