[project]
name = "governance-api"
version = "0.1.0"
description = "AI Gateway control-plane governance API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/governance_api"]
