[project]
name = "governance-api"
version = "0.1.0"
description = "AI Gateway control-plane governance API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    "pyyaml>=6.0",
    # Postgres driver. Base (not optional) so every image/`uv run` has it: both
    # planes connect to Postgres in any multi-host deploy (e.g. AWS/RDS), and
    # SQLite stays the zero-config local default regardless. Binary wheel — no
    # system libpq needed.
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/governance_api"]
